# disco

./: .envrc  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile.aarch64-unknown-linux-gnu  Dockerfile.aarch64-unknown-linux-musl  Dockerfile.x86_64-unknown-linux-musl  README.md  build.rs  config.yaml  start-cluster.sh  test-cluster.sh
.cargo/: config.toml
.github/workflows/: build.yml
disco-client/: Cargo.toml
disco-client/src/: lib.rs
disco-client/src/client/: mod.rs
disco-client/src/command/: bootstrap.rs  mod.rs  start.rs
disco-common/: Cargo.toml
disco-common/src/: lib.rs
disco-common/src/action/: actor.rs  bash_command.rs
disco-common/src/builder/: cluster.rs  host.rs  ip_address.rs  key_pair.rs  mod.rs  storage.rs  utils.rs
disco-common/src/engine/: boa_impl.rs  engine.rs  mod.rs  queue.rs
disco-common/src/engine/api/: aws_provider.rs  cluster.rs  mod.rs  storage.rs
disco-common/src/engine/rhai_impl/: mod.rs  plugin.rs
disco-common/src/provider/: aws.rs  mod.rs  provider.rs
disco-common/src/ssh/: client.rs  installer.rs  mod.rs  session.rs
disco-common/src/task_pool/: mod.rs  task_pool.rs
disco-daemon/: Cargo.toml  build.rs  config.yaml
disco-daemon/proto/: app.proto  app_types.proto  raft.proto
disco-daemon/src/: config.rs  lib.rs  settings.rs  test.rs
disco-daemon/src/controller/: controller.rs  init.rs  mod.rs
disco-daemon/src/grpc/: app_service.rs  raft_service.rs
disco-daemon/src/network/: mod.rs
disco-daemon/src/node/: mod.rs  node.rs
disco-daemon/src/pb_impl/: impl_append_entries_request.rs  impl_append_entries_response.rs  impl_client_write_response.rs  impl_entry.rs  impl_leader_id.rs  impl_log_id.rs  impl_membership.rs  impl_snapshot_request.rs  impl_vote.rs  impl_vote_request.rs  impl_vote_response.rs
disco-daemon/src/store/: mod.rs
proto/: api_service.proto  app.proto  app_types.proto  internal_service.proto  management_service.proto  raft.proto
src/: lib.rs  node.rs  settings.rs  store.rs
src/action/: actor.rs  mod.rs
src/builder/: cluster.rs
src/client/: mod.rs
src/controller/: controller.rs  init.rs
src/grpc/: api_service.rs  app_service.rs  internal_service.rs  management_service.rs  raft_service.rs
src/memstore/: log_store.rs  mod.rs
src/network/: mod.rs
src/node/: node.rs  runtime.rs
src/pb_impl/: impl_append_entries_request.rs  impl_append_entries_response.rs  impl_client_write_response.rs  impl_log_id.rs  impl_vote.rs  impl_vote_request.rs  impl_vote_response.rs
src/provider/: aws.rs  provider.rs
src/store/: log_store.rs  mod.rs
test-deployment/: client.js  client.rhai  cluster.js  disco  discod  gen_mtls_cert  host.json  id_ed25519.pub  init-goal.rhai  init-local-cluster  init.rhai  install  massif.out.1104396  memory_profile.txt  node-config.json
