[workspace.package]
version = "0.1.0"
edition = "2024"
authors = [
  "Jeff Moss <jmoss@heavyobjects.com>",
]
description = "Distributed cluster orchestrator"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jeffmoss/disco"
homepage = "https://github.com/jeffmoss/disco"
documentation = "https://github.com/jeffmoss/disco"
keywords = ["raft", "orchestrator", "cluster", "distributed"]
categories = ["command-line-interface", "command-line-utilities"]

[workspace]
members = [
  "disco-client",
  "disco-common",
  "disco-daemon",
]

[workspace.dependencies]
anyhow = { version = "1.0.97" }
boa_engine = { git = "https://github.com/boa-dev/boa.git" }
boa_interop = { git = "https://github.com/boa-dev/boa.git" }
boa_gc = { git = "https://github.com/boa-dev/boa.git" }
boa_runtime = { git = "https://github.com/boa-dev/boa.git" }
boa_interner = { git = "https://github.com/boa-dev/boa.git" }
clap = { version = "4.5.23", features = ["derive", "env"] }
config = "0.15.4"
futures = "0.3.31"
openraft = { git = "https://github.com/databendlabs/openraft.git", features = ["type-alias"] }
prost = "0.13.4"
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.42.0", default-features = false, features = ["sync", "fs", "process"] }
tonic = "0.12.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
aws-sdk-ec2 = { version = "1.128.0", features = ["behavior-version-latest"] }
aws-sdk-iam = { version = "1.70.0", features = ["behavior-version-latest"] }
aws-config = { version = "1.6.2", features = ["behavior-version-latest"] }
async-trait = { version = "0.1.88" }
russh = { version = "0.52.0" }
base64ct = { version = "1.7.3" }
futures-concurrency = "7.6.3"
futures-lite = "2.6.0"

# build-dependencies
prost-build = "0.13.4"
tonic-build = "0.12.3"

# overrides
time = "0.3.41"
