[workspace.package]
version = "0.1.0"
edition = "2024"
authors = [
  "Jeff Moss <jmoss@heavyobjects.com>",
]
description = "Distributed cluster orchestrator"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jeffmoss/disco"
homepage = "https://github.com/jeffmoss/disco"
documentation = "https://github.com/jeffmoss/disco"
keywords = ["raft", "orchestrator", "cluster", "distributed"]
categories = ["command-line-interface", "command-line-utilities"]

[workspace]
members = [
  "disco-client",
  "disco-common",
  "disco-daemon",
]

[workspace.dependencies]
anyhow = { version = "1.0.97" }
boa_engine = { git = "https://github.com/boa-dev/boa.git" }
boa_interop = { git = "https://github.com/boa-dev/boa.git" }
boa_gc = { git = "https://github.com/boa-dev/boa.git" }
boa_runtime = { git = "https://github.com/boa-dev/boa.git" }
boa_interner = { git = "https://github.com/boa-dev/boa.git" }
clap = { version = "4.5.23", features = ["derive", "env"] }
config = "0.15.4"
futures = "0.3.31"
openraft = { git = "https://github.com/databendlabs/openraft.git", features = ["type-alias"] }
prost = "0.13.4"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.140" }
tokio = { version = "1.42.0", default-features = false, features = ["sync", "fs", "process"] }
tonic = { version = "0.12.3", features = ["tls"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
aws-sdk-ec2 = { version = "1.128.0", features = ["behavior-version-latest"] }
aws-sdk-iam = { version = "1.70.0", features = ["behavior-version-latest"] }
aws-sdk-route53 = { version = "1.78.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.89.0", features = ["behavior-version-latest"] }
aws-config = { version = "1.6.2", features = ["behavior-version-latest"] }
async-trait = { version = "0.1.88" }
russh = { version = "0.52.0" }
rustls = { version = "0.23.27", default-features = false, features = ["aws_lc_rs"] }
base64ct = { version = "1.7.3" }
futures-concurrency = "7.6.3"
futures-lite = "2.6.0"

# build-dependencies
prost-build = "0.13.4"
tonic-build = "0.12.3"

# overrides
time = "0.3.41"
