[package]
name = "disco-client"
readme = "../README.md"

version       = { workspace = true }
edition       = { workspace = true }
authors       = { workspace = true }
categories    = { workspace = true }
description   = { workspace = true }
documentation = { workspace = true }
homepage      = { workspace = true }
keywords      = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }

[[bin]]
name = "disco"


[features]
static = []

[dependencies]
clap               = { workspace = true }
tokio              = { workspace = true }
tonic              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

disco-daemon       = { path = "../disco-daemon" }