[package]
name = "disco-common"
readme = "../README.md"

version       = { workspace = true }
edition       = { workspace = true }
authors       = { workspace = true }
categories    = { workspace = true }
description   = { workspace = true }
documentation = { workspace = true }
homepage      = { workspace = true }
keywords      = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }

[features]
default = ["aws", "fs-access", "rhai-engine"]
aws = ["dep:aws-sdk-ec2", "dep:aws-sdk-iam", "dep:aws-config"]
fs-access = ["dep:rhai-fs"]
rhai-engine = ["dep:rhai"]
boa-engine = ["dep:boa_engine"]

[dependencies]
anyhow             = { workspace = true }
boa_engine         = { workspace = true, optional = true }
aws-sdk-ec2        = { workspace = true, optional = true }
aws-sdk-iam        = { workspace = true, optional = true }
aws-config         = { workspace = true, optional = true }
async-trait        = { workspace = true }
base64ct           = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
rhai               = { workspace = true, optional = true }
russh              = { workspace = true }
rhai-fs            = { version = "0.1", optional = true, features = ["sync"] }
