[package]
name = "disco-common"
readme = "../README.md"

version       = { workspace = true }
edition       = { workspace = true }
authors       = { workspace = true }
categories    = { workspace = true }
description   = { workspace = true }
documentation = { workspace = true }
homepage      = { workspace = true }
keywords      = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }

[features]
default = ["aws", "js"]
aws = ["dep:aws-sdk-ec2", "dep:aws-sdk-iam", "aws-sdk-route53", "aws-sdk-s3", "dep:aws-config"]
js = ["dep:boa_engine", "dep:boa_interop", "dep:boa_gc", "dep:boa_runtime", "dep:boa_interner"]

[dependencies]
anyhow              = { workspace = true }
boa_engine          = { workspace = true, optional = true }
boa_interop         = { workspace = true, optional = true }
boa_gc              = { workspace = true, optional = true }
boa_runtime         = { workspace = true, optional = true }
boa_interner        = { workspace = true, optional = true }
aws-sdk-ec2         = { workspace = true, optional = true }
aws-sdk-iam         = { workspace = true, optional = true }
aws-sdk-route53     = { workspace = true, optional = true }
aws-sdk-s3          = { workspace = true, optional = true }
aws-config          = { workspace = true, optional = true }
async-trait         = { workspace = true }
base64ct            = { workspace = true }
futures-concurrency = { workspace = true }
futures-lite        = { workspace = true }
tokio               = { workspace = true }
tracing             = { workspace = true }
russh               = { workspace = true }
serde_json          = { workspace = true }