
[package]
name = "disco-daemon"
readme = "../README.md"

version       = { workspace = true }
edition       = { workspace = true }
authors       = { workspace = true }
categories    = { workspace = true }
description   = { workspace = true }
documentation = { workspace = true }
homepage      = { workspace = true }
keywords      = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }

[[bin]]
name = "discod"

[dependencies]
clap               = { workspace = true }
config             = { workspace = true }
futures            = { workspace = true }
openraft           = { workspace = true }
prost              = { workspace = true }
rustls             = { workspace = true }
serde              = { workspace = true }
tokio              = { workspace = true }
tonic              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
disco-common       = { path = "../disco-common" }

[build-dependencies]
prost-build = { workspace = true }
tonic-build = { workspace = true }